--- a/src/views/realTimeProducts.handlebars
+++ b/src/views/realTimeProducts.handlebars
@@ -1,5 +1,34 @@
 <div>
-    
+    <p>Real Time Products Sockets</p>
+
+    <form action="/realTimeProducts/" method="post">
+
+        <label for="title">Titulo</label>
+        <input type="text" id="titleInput" name="title">
+        <br>
+        <label for="description">Descripcion</label>
+        <input type="text" id="descriptionInput" name="description">
+        <br>
+        <label for="code">Codigo</label>
+        <input type="text" id="codeInput" name="code">
+        <br>
+        <label for="price">Precio</label>
+        <input type="text" id="priceInput" name="price">
+        <br>
+        <label for="stock">Cantidad</label>
+        <input type="text" id="stockInput" name="stock">
+        <br>
+        <label for="category">Categoria</label>
+        <input type="text" id="categoryInput" name="category">
+        <br>
+        <label for="thumbnails">Imagen</label>
+        <input type="text" id="thumbnailsInput" name="thumbnails">
+        <br>
+
+        <button type="submit" id="addProductButton"> Enviar</button>
+
+    </form>
+    <br>
     <table>
         <thead>
             <tr>
@@ -49,4 +78,4 @@
 </div>
 
 <script src="/socket.io/socket.io.js"></script>
-
+<script src="/js/socket.js"></script>
